# WigglyRivers

./: .gitignore  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package-conda.yml
WigglyRivers/: AppFiles.py  VersionControl.py  __init__.py
WigglyRivers/nhd_extract/: nhd_extract.py
WigglyRivers/rivers/: CompareMeanders.py  ReachExtraction.py  RiverFunctions.py  RiversNetwork.py  __init__.py
WigglyRivers/tests/: test_RiverNetwork.py
WigglyRivers/tests/data_test/: meander_database.csv  tree_scales.p  tree_scales_database.feather
WigglyRivers/utilities/: Logger.py  __init__.py  classExceptions.py  filesManagement.py  general_functions.py  graphs.py  interactivePlotly.py  utilities.py
WigglyRivers/wavelet_tree/: TreeScale.py  WaveletTreeFunctions.py  waveletFunctions.py
examples/new_user_workflow/01_Synthetic_Rivers/: Kinoshita_Examples.ipynb  Meanderpy_River_Example.ipynb
examples/workflows/NHDPlus_HR/: Analyze_Catchment_Data.ipynb  Compare_Manual_Automatic_test.py  Correct_Manual_Selection.py  Correct_Manual_old.ipynb  Extract_NHDPlus_HR_Data.ipynb  extract_meanders_NHDPlus_HR.py  test_nhdplus_extraction.py
examples/workflows/NHDPlus_HR/clustering_analysis/: 01_extract_wbd_headwaters.py  02_check_lengths.py  03_clip_river_transects.py  (+3 more)
examples/workflows/Synthetic_Rivers/: Kinoshita_Examples.ipynb  test_meanderpy.py
examples/workflows/kinoshita/: Kinoshita_Examples.ipynb
pyModel/: __init__.py  class_temp.py
pyModel/functions/: __init__.py  function_temp.py
(+6 files in other folders)
